feat(bcc): separates the available from the reserved classes in two different routes
