# src/swagger.json
@@ -2943,6 +2943,75 @@
 						]
 					}
 				],
+				"parameters": []
+			}
+		},
+		"/book-club-class/reserved/{idvol}": {
+			"get": {
+				"operationId": "GetReservedClasses",
+				"responses": {
+					"200": {
+						"description": "Successfully fetched the essays",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/AvailableClassRowEntity"
+									},
+									"type": "array"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "Validation Error",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"details": {
+											"$ref": "#/components/schemas/FieldErrors"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"details",
+										"message"
+									],
+									"type": "object"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"message": "Validation Failed",
+											"details": {
+												"exampleField1": {
+													"message": "invalid string value",
+													"value": 12
+												},
+												"exampleField2": {
+													"message": "'exampleField2' is required"
+												}
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Book Club Class"
+				],
+				"security": [
+					{
+						"jwt": [
+							"bookPermission"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
